log
Fri, Mar 28, 2025 11:16:29 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025 11:28:38 AM: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e18500f
Fri, Mar 28, 2025 11:33:41 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
d63fa02
Fri, Mar 28, 2025 11:37:00 AM: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
93258f9
Fri, Mar 28, 2025 11:38:26 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6b19ba4
Fri, Mar 28, 2025 11:43:37 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
d5c2874
Fri, Mar 28, 2025 11:45:03 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2e7c935
Fri, Mar 28, 2025 11:46:16 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
c2320c8
Fri, Mar 28, 2025 11:48:26 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
1caed8d
Fri, Mar 28, 2025 11:50:27 AM: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  6|4
total_score: 25/70
47e4ab5
Fri, Mar 28, 2025 11:52:21 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e40247
